adjust text position in editMode Menu and Help to avoid overlaps

--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
   border: 0;
 }
 /* remove before deployment */
-/* body {
-  margin: 5px;
-} */
+body {
+  margin: 10px;
+}
 p {
   margin-left: 5px;
 }
